  preference is set.
* (bug 23171) Improve IE6 version check to avoid false positives.
* (bug 23176) Fixed upload warning override feature "upload new version", 
  broken in 1.16 beta 1.
* Fixed regression in unwatch links sent out in notification emails. When the 
  mailing job was deferred via the job queue, the title was incorrect.
* (bug 23534) Fixed SQL query error in API list=allusers.

=== Changes since 1.16 beta 1 ===

* Fixed errors in maintenance/patchSql.php
* (bug 19627) Fix regression from r57867 where HTMLForm would output 
  <element classes="foo bar"> rather than <element class="foo bar">
* Fixed broken "-r" option to maintenance/lag.php
* (bug 23076) Fixed login CSRF vulnerability. Logins now require a token to 
  be submitted along with the user name and password.

=== Configuration changes in 1.16 ===

* (bug 18222) $wgMinimalPasswordLength default is now 1
* $wgSessionHandler can be used to configure session.save_handler
* $wgLocalFileRepo/$wgForeignFileRepos now have a 'fileMode' parameter to
  be used when uploading/moving files
* (bug 18761) $wgHiddenPrefs is a new array for specifying preferences not
  to be shown to users
* $wgAllowRealName and $wgAllowUserSkin were deprecated in favor of
  $wgHiddenPrefs[] = 'realname', but the former are still retained
  for backwards-compatibility
* (bug 9257) $wgRCMaxAge now defaults to three months
* $wgDevelopmentWarnings can be set to true to show warnings about deprecated
  functions and other potential errors when developing.
* Subpages are now enabled in the MediaWiki namespace by default.  This is
  mainly a cosmetic change, and does not in any way affect the MessageCache,
  which was already effectively treating the namespace as if it had subpages.
* Oracle: maintenance/ora/user.sql script for creating DB user on oracle with
  appropriate privileges. Creating this user with web-install page requires
  oci8.privileged_connect set to On in php.ini.